# comp0034-wk6

./: README.md  pyproject.toml  requirements.txt  testing.md  wk6-dash.md  wk6-flask.md
activities/: 1-dash.md  1-flask.md  2-html_intro.md  3-css_intro.md  4-responsive_intro.md  5-js_intro.md
data/: paralympic_events.csv
html_css_js/: css_intro.css  css_intro.html  html_5_layout.html  html_intro.html  html_intro_basic_structure.html  js_intro.html  js_intro.js  responsive.css  responsive.html
html_css_js/example/: example.css  example.html  example.js
paralympics-flask/: __init__.py  models.py  views.py
paralympics_flask/: __init__.py
src/paralympics_dash/: paralympics_app.py  paralympics_dash.py
src/paralympics_flask/: __init__.py  views.py
