[project]
name = "comp0034-wk6"
version = "1.0.0"
description = "Week 6 coding activities"


# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["paralympics-dash", "paralympics-flask"]
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)
